--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,11 +1,10 @@
-<div class="summary-container">
-  <h3>Les résultats des simulations proposées par Effy</h3>
-
-  <div *ngIf="projectInfos()?.isOwner">
+<div class="form-container">
+  <shared-title [title]="'Les résultats des simulations proposées par Effy*'"></shared-title>
+  <div *ngIf="projectInfos()?.isOwner ">
     <p>{{ message() }}</p>
     <p>Coût du projet : {{ projectCost | currency:'EUR':'symbol':'1.2-2'}}</p>
-    <ng-container *ngIf="calculateEffyAid() > 0; else notEligible">
-      <p>Aide Effy : {{ calculateEffyAid() }} €
+    <ng-container *ngIf="calculateEffyAid() > 0">
+      <p>Aide Effy : {{ calculateEffyAid() | currency:'EUR':'symbol':'1.2-2' }}
         <span>
           <h4>félicitations vous êtes
             éligibile à notre programme d’aides et d’accompagnement</h4>
@@ -13,9 +12,10 @@
       </p>
     </ng-container>
   </div>
-
-  <ng-template #notEligible>
-    <p> Vous n'êtes pas
-      éligibile à notre programme d’aides et d’accompagnement</p>
-  </ng-template>
+  <ng-container *ngIf="!projectInfos()?.isOwner || calculateEffyAid() <= 0  ">
+    <span>
+      <h4> vous n'êtes
+        éligibile à notre programme d’aides et d’accompagnement</h4>
+    </span>
+  </ng-container>
 </div>
