--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -14,8 +14,8 @@
   </div>
   <ng-container *ngIf="!projectInfos()?.isOwner || calculateEffyAid() <= 0  ">
     <span>
-      <h4> vous n'êtes
-        éligibile à notre programme d’aides et d’accompagnement</h4>
+      <h4> Vous n'êtes pas
+        éligibile à notre programme d’aides et d’accompagnement.</h4>
     </span>
   </ng-container>
 </div>
